--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create default ZAP rules file
+        run: |
+          # If the zap-rules.conf does not exist, create it with basic defaults.
+          if [ ! -f zap-rules.conf ]; then
+            echo "# Default ZAP rules file" > zap-rules.conf
+            echo "# Add your custom rules below" >> zap-rules.conf
+          fi
+          # Ensure the file is writable
+          chmod 666 zap-rules.conf
+
       - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.4.0
         with:
           target: ${{ github.event.inputs.target_url }}
           rules_file_name: 'zap-rules.conf'
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           cmd_options: '-config api.disablekey=true'
       
       - name: Archive ZAP Report
